Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager\n"
 "POT-Creation-Date: 2010-02-18 10:53+0000\n"
-"PO-Revision-Date: 2010-02-18 18:26+0100\n"
+"PO-Revision-Date: 2010-02-19 10:32+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -104,14 +104,19 @@ msgstr ""
 #: ../data/gnome-color-manager.schemas.in.h:9
 msgid "Show the fine tuning controls for display devices."
 msgstr ""
+"Mostrar los controles de ajuste fino para los dispositivos de pantalla."
 
 #: ../data/gnome-color-manager.schemas.in.h:10
 msgid "The CMYK profile file name to be used by applications by default."
 msgstr ""
+"El nombre de archivo del perfil CMYK que las aplicaciones deben usar de "
+"forma predeterminada."
 
 #: ../data/gnome-color-manager.schemas.in.h:11
 msgid "The RGB profile file name to be used by applications by default."
 msgstr ""
+"El nombre de archivo del perfil RGB que las aplicaciones deben usar de forma "
+"predeterminada."
 
 #: ../data/gnome-color-manager.schemas.in.h:12
 msgid "The default CMYK profile."
@@ -251,6 +256,7 @@ msgstr "Copiando archivos"
 #: ../src/gcm-calibrate-argyll.c:858
 msgid "Copying source image, chart data and CIE reference values."
 msgstr ""
+"Copiando imagen de origen, datos de gráficos y los valores de referencia CIE."
 
 #. TRANSLATORS: title, drawing means painting to the screen
 #: ../src/gcm-calibrate-argyll.c:931
@@ -277,24 +283,21 @@ msgstr "Configurar la pantalla"
 
 #. TRANSLATORS: dialog message
 #: ../src/gcm-calibrate-argyll.c:1195
-#, fuzzy
 #| msgid "Setting up hardware device for use..."
 msgid "Setting up display device for use..."
-msgstr "configurando el dispositivo hardware para su uso..."
+msgstr "Configurando el dispositivo de pantalla para su uso..."
 
 #. TRANSLATORS: title, hardware refers to a calibration device
 #: ../src/gcm-calibrate-argyll.c:1248
-#, fuzzy
 #| msgid "Setting up device"
 msgid "Set up device"
-msgstr "Configurando dispositivo"
+msgstr "Configurar dispositivo"
 
 #. TRANSLATORS: dialog message
 #: ../src/gcm-calibrate-argyll.c:1251
-#, fuzzy
 #| msgid "Setting up hardware device for use..."
 msgid "Setting up device for use..."
-msgstr "configurando el dispositivo hardware para su uso..."
+msgstr "Configurando el dispositivo para su uso..."
 
 #. TRANSLATORS: title, device is a hardware color calibration sensor
 #: ../src/gcm-calibrate-argyll.c:1337
@@ -303,7 +306,6 @@ msgstr "Adjunte un dispositivo"
 
 #. TRANSLATORS: dialog message, ask user to attach device, and there's an example image
 #: ../src/gcm-calibrate-argyll.c:1345
-#, fuzzy
 #| msgid ""
 #| "Please attach the hardware device to the center of the screen on the grey "
 #| "square."
@@ -312,11 +314,10 @@ msgid ""
 "square like the image below."
 msgstr ""
 "Adjunte el dispositivo hardware en el centro de la pantalla en el cuadro "
-"gris."
+"gris como en la imagen inferior."
 
 #. TRANSLATORS: dialog message, ask user to attach device
 #: ../src/gcm-calibrate-argyll.c:1348
-#, fuzzy
 #| msgid ""
 #| "Please attach the hardware device to the center of the screen on the grey "
 #| "square."
@@ -427,7 +428,7 @@ msgstr ""
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate.c:501
 msgid "Reset your display to the factory defaults."
-msgstr ""
+msgstr "Reiniciar su dispositivo a los valores predeterminados de fábrica."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate.c:504
