Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager\n"
 "POT-Creation-Date: 2010-02-19 09:34+0000\n"
-"PO-Revision-Date: 2010-02-19 10:42+0100\n"
+"PO-Revision-Date: 2010-02-19 13:07+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -728,6 +728,8 @@ msgstr "Perfil ICC para instalar"
 #: ../src/gcm-install-system-wide.c:78
 msgid "GNOME Color Manager ICC profile system-wide installer"
 msgstr ""
+"Instalador amplio del sistema de perfiles de color ICC del Gestor de color "
+"de GNOME"
 
 #. TRANSLATORS: user did not specify a valid filename
 #: ../src/gcm-install-system-wide.c:86
@@ -998,7 +1000,7 @@ msgstr ""
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/gcm-prefs.c:1001
 msgid "Cannot calibrate this type of device"
-msgstr ""
+msgstr "No se puede calibrar este tipo de dispositivo"
 
 #. TRANSLATORS: this is when the user is using a binary blob
 #: ../src/gcm-prefs.c:1179
@@ -1138,6 +1140,8 @@ msgid ""
 "This profile does not have the information required for whole-screen color "
 "correction"
 msgstr ""
+"Este perfil no tiene la información necesaria para la corrección de color de "
+"la pantalla entera"
 
 #. TRANSLATORS: this is where the ICC profile_lcms1 has no description
 #: ../src/gcm-profile.c:355
@@ -1399,7 +1403,7 @@ msgstr "Intento de renderizado"
 
 #: ../data/gcm-prefs.ui.h:57
 msgid "Save these profiles for all users"
-msgstr ""
+msgstr "Guardar estos perfiles para todos los usuarios"
 
 #. The serial number of the device
 #: ../data/gcm-prefs.ui.h:59
@@ -1414,7 +1418,7 @@ msgstr ""
 #. Technical color word for softproof rendering intent
 #: ../data/gcm-prefs.ui.h:62
 msgid "Softproof:"
-msgstr ""
+msgstr "Prueba blanda:"
 
 #: ../data/gcm-prefs.ui.h:63
 msgid "The rendering intent is how one gamut size is mapped to another."
@@ -1445,16 +1449,14 @@ msgid "This is the default RGB working space to use in applications"
 msgstr ""
 
 #: ../data/gcm-prefs.ui.h:69
-#, fuzzy
 #| msgid "Working spaces:"
 msgid "Working space"
-msgstr "Áreas de trabajo:"
+msgstr "Espacio de trabajo"
 
 #: ../data/gcm-prefs.ui.h:70
-#, fuzzy
 #| msgid "Apply _global display correction"
 msgid "_Apply display correction"
-msgstr "Aplicar corrección glo_bal de pantalla"
+msgstr "_Aplicar corrección de pantalla"
 
 #. This is a button to delete the saved device
 #: ../data/gcm-prefs.ui.h:72
@@ -1462,20 +1464,18 @@ msgid "_Delete device"
 msgstr "_Eliminar dispositivo"
 
 #: ../data/gcm-prefs.ui.h:73
-#, fuzzy
 #| msgid "Delete profile"
 msgid "_Delete profile"
-msgstr "Eliminar perfil"
+msgstr "_Eliminar perfil"
 
 #: ../data/gcm-prefs.ui.h:74
 msgid "_Import profile"
 msgstr "_Importar perfil"
 
 #: ../data/gcm-prefs.ui.h:75
-#, fuzzy
 #| msgid "Defaults"
 msgid "_Make Default"
-msgstr "Predeterminados"
+msgstr "_Hacer predeterminado"
 
 #. This resets the device to it's defaults, and removes any user tweaked settings.
 #: ../data/gcm-prefs.ui.h:77
@@ -1483,12 +1483,9 @@ msgid "_Reset to defaults"
 msgstr "_Restablecer valores predeterminados"
 
 #: ../data/gcm-prefs.ui.h:78
-#, fuzzy
 #| msgid "Do global correction and set profile for color managed applications"
 msgid "_Set profile for color managed applications"
-msgstr ""
-"Realizar la corrección global y establecer un perfil para aplicaciones con "
-"gestión de color"
+msgstr "_Establecer el perfil de color para las aplicaciones gestionadas"
 
 #~ msgid "CMP Digital Target 3"
 #~ msgstr "CMP Digital Target 3"
