Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager\n"
 "POT-Creation-Date: 2010-02-19 09:34+0000\n"
-"PO-Revision-Date: 2010-02-19 13:07+0100\n"
+"PO-Revision-Date: 2010-02-19 15:20+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -1288,10 +1288,9 @@ msgstr ""
 
 #. Section heading for device settings
 #: ../data/gcm-prefs.ui.h:21
-#, fuzzy
 #| msgid "Device:"
 msgid "Device"
-msgstr "Dispositivo:"
+msgstr "Dispositivo"
 
 #. The manufacturer of the profile
 #: ../data/gcm-prefs.ui.h:23
@@ -1309,17 +1308,15 @@ msgid "Devices"
 msgstr "Dispositivos"
 
 #: ../data/gcm-prefs.ui.h:28
-#, fuzzy
 #| msgid "Display:"
 msgid "Display"
-msgstr "Pantalla:"
+msgstr "Pantalla"
 
 #. If the profile contains a display correction table
 #: ../data/gcm-prefs.ui.h:30
-#, fuzzy
 #| msgid "Apply _global display correction"
 msgid "Display correction:"
-msgstr "Aplicar corrección glo_bal de pantalla"
+msgstr "Corrección de pantalla:"
 
 #. What mode to use for display rendering intent
 #: ../data/gcm-prefs.ui.h:32
@@ -1338,10 +1335,9 @@ msgstr "Tamaño de archivo:"
 
 #. Settings that users don't normally have to touch
 #: ../data/gcm-prefs.ui.h:38
-#, fuzzy
 #| msgid "Fine tuning:"
 msgid "Fine tuning"
-msgstr "Ajuste fino:"
+msgstr "Ajuste fino"
 
 #: ../data/gcm-prefs.ui.h:39
 msgid "Gamma:"
@@ -1371,10 +1367,9 @@ msgid "Open the documentation"
 msgstr "Abrir la documentación"
 
 #: ../data/gcm-prefs.ui.h:48
-#, fuzzy
 #| msgid "Profile Graphs:"
 msgid "Profile Graphs"
-msgstr "Gráficas de perfil:"
+msgstr "Gráficas de perfil"
 
 #. The type of profile, e.g. display, scanner, etc.
 #: ../data/gcm-prefs.ui.h:50
@@ -1391,6 +1386,8 @@ msgid ""
 "Program the video card with the adjusted color values so all windows are "
 "color corrected"
 msgstr ""
+"Programar la tarjeta de vídeo con los valores de color ajustados para que "
+"todas las ventanas tengan el color correcto"
 
 #. What mode to use for display rendering intent
 #: ../data/gcm-prefs.ui.h:55
@@ -1414,6 +1411,8 @@ msgstr "Número de serie:"
 msgid ""
 "Set a property on the system so applications use the default display profile"
 msgstr ""
+"Establecer una propiedad en el sistema para que las aplicaciones usen el "
+"perfil de mostrado predeterminado"
 
 #. Technical color word for softproof rendering intent
 #: ../data/gcm-prefs.ui.h:62
@@ -1439,14 +1438,17 @@ msgstr ""
 #: ../data/gcm-prefs.ui.h:66
 msgid "These settings control how color management is applied to your desktop."
 msgstr ""
+"Estos ajustes controlan cómo se aplica la gestión de color en su escritorio."
 
 #: ../data/gcm-prefs.ui.h:67
 msgid "This is the default CMYK working space to use in applications"
 msgstr ""
+"Este es el espacio de color CMYK predeterminado para usar en aplicaciones"
 
 #: ../data/gcm-prefs.ui.h:68
 msgid "This is the default RGB working space to use in applications"
 msgstr ""
+"Este es el espacio de color RGB predeterminado para usar en aplicaciones"
 
 #: ../data/gcm-prefs.ui.h:69
 #| msgid "Working spaces:"
