Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager\n"
 "POT-Creation-Date: 2010-02-19 09:34+0000\n"
-"PO-Revision-Date: 2010-02-19 15:20+0100\n"
+"PO-Revision-Date: 2010-02-19 15:55+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -138,14 +138,18 @@ msgstr ""
 #: ../data/gnome-color-manager.schemas.in.h:17
 msgid "The rendering intent to use for softproofs, e.g. 'perceptual'."
 msgstr ""
+"El intento de renderizado que usar para pruebas blandas, ej. «de percepción»"
 
 #: ../data/gnome-color-manager.schemas.in.h:18
 msgid "The rendering intent to use for the display, e.g. 'perceptual'."
 msgstr ""
+"El intento de renderizado que usar para la pantalla, ej. «de percepción»"
 
 #: ../policy/org.gnome.color.policy.in.h:1
 msgid "Authentication is required to install the color profile for all users"
 msgstr ""
+"Se necesita autenticación para instalar perfiles de color para todos los "
+"usuarios"
 
 #. SECURITY:
 #. - Normal users require admin authentication to install files system
@@ -342,6 +346,8 @@ msgid ""
 "The pattern match wasn't good enough. Ensure you have the correct type of "
 "target selected."
 msgstr ""
+"La coincidencia del patrón no era suficientemente buena. Asegúrese de que ha "
+"corregido el tipo de objetivo seleccionado."
 
 #. TRANSLATORS: this is saved in the profile
 #: ../src/gcm-calibrate.c:103
@@ -375,13 +381,15 @@ msgstr ""
 #. TRANSLATORS: title, the hardware calibration device does not support projectors
 #: ../src/gcm-calibrate.c:341
 msgid "Could not calibrate using this colorimeter device"
-msgstr ""
+msgstr "No se pudo calibrar usando este dispositivo de colorímetro"
 
 #. TRANSLATORS: dialog message
 #: ../src/gcm-calibrate.c:344
 msgid ""
 "This colorimeter device is not designed to support profiling projectors."
 msgstr ""
+"El dispositivo de colorímetro no está diseñado para soportar perfilado de "
+"proyectores."
 
 #. TRANSLATORS: this is the formattted custom profile description. "Custom" refers to the fact that it's user generated
 #: ../src/gcm-calibrate.c:399
@@ -401,6 +409,8 @@ msgid ""
 "You may want to consult the owner's manual for your display on how to "
 "achieve these settings."
 msgstr ""
+"Puede querer consultar el manual del propietario para su pantalla para saber "
+"cómo lograr estos ajustes."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate.c:426
@@ -411,6 +421,7 @@ msgstr "Reiniciar su dispositivo a los valores predeterminados de fábrica."
 #: ../src/gcm-calibrate.c:429
 msgid "Disable dynamic contrast if your display has this feature."
 msgstr ""
+"Desactive el contraste dinámico si su pantalla tiene esta característica."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate.c:432
@@ -418,6 +429,8 @@ msgid ""
 "Configure your display with custom color settings and ensure the RGB "
 "channels are set to the same values."
 msgstr ""
+"Configure su pantalla con ajustes de color personalizados y asegúrese de que "
+"los canales RGB están configurados con los mismos valores."
 
 #. TRANSLATORS: dialog message, addition to bullet item
 #: ../src/gcm-calibrate.c:435
@@ -1169,7 +1182,7 @@ msgstr ""
 #. TRANSLATORS: rendering intent: you probably want to google this
 #: ../src/gcm-utils.c:509
 msgid "Perceptual"
-msgstr ""
+msgstr "De percepción"
 
 #. TRANSLATORS: rendering intent: you probably want to google this
 #: ../src/gcm-utils.c:513
