Updated Spanish translation

--- a/help/es/es.po
+++ b/help/es/es.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager.help.master\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-02-19 10:59+0000\n"
-"PO-Revision-Date: 2010-02-19 13:05+0100\n"
+"POT-Creation-Date: 2010-02-19 16:10+0000\n"
+"PO-Revision-Date: 2010-02-19 18:47+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -305,10 +305,6 @@ msgid "Usage"
 msgstr "Uso"
 
 #: C/gnome-color-manager.xml:149(para)
-#| msgid ""
-#| "<application>GNOME Color Manager</application> is usually started at "
-#| "GNOME startup, but you can manually start <application>GNOME Color "
-#| "Manager</application> by doing:"
 msgid ""
 "<application>GNOME Color Manager</application> is usually started at GNOME "
 "start-up, but you can manually start <application>GNOME Color Manager</"
@@ -334,10 +330,6 @@ msgid "gcm-apply <placeholder-1/>"
 msgstr "gcm-apply <placeholder-1/>"
 
 #: C/gnome-color-manager.xml:156(para)
-#| msgid ""
-#| "<application>GNOME Color Manager</application> is usually started at "
-#| "GNOME startup, but you can manually start <application>GNOME Color "
-#| "Manager</application> by doing:"
 msgid ""
 "<application>GNOME Color Manager</application> preferences dialog can be "
 "started from the GNOME Preferences Menu, but you can start this using:"
@@ -463,10 +455,45 @@ msgid "The final stage of calibration, which can take over 15 minutes."
 msgstr "La parte final del calibrado, que puede llevar más de 15 minutos."
 
 #: C/gnome-color-manager.xml:300(title)
+msgid "Frequently asked questions"
+msgstr "Preguntas más frecuentes"
+
+#: C/gnome-color-manager.xml:301(para)
+msgid "This section list questions frequently asked about color management"
+msgstr ""
+"Esta sección lista las preguntas más frecuentes acerca de la gestión del "
+"color"
+
+#: C/gnome-color-manager.xml:304(title)
+msgid "Missing information for whole-screen calibration"
+msgstr "Falta información acerca de la calibración de la pantalla completa"
+
+#: C/gnome-color-manager.xml:305(para)
+msgid ""
+"Unfortunately, many vendor-supplied ICC profiles do not include the "
+"information required for whole-screen color correction. These profiles can "
+"still be useful for applications that can do color compensation, but you "
+"will not see all the colors of your screen change."
+msgstr ""
+"Desafortunadamente muchos perfiles ICC proporcionados por los fabricantes no "
+"incluyen la información necesaria para la corrección de color de la pantalla "
+"entera. Estos perfiles aún pueden ser útiles para aplicaciones que hacen "
+"compensación de color, pero no verá todos los colores del cambio de su "
+"pantalla."
+
+#: C/gnome-color-manager.xml:311(para)
+msgid ""
+"In order to create a full profile, you will need to use a special "
+"calibration device called a colorimeter."
+msgstr ""
+"Para poder crear un perfil completo deberá usar un dispositivo de "
+"calibración especial llamado colorímetro."
+
+#: C/gnome-color-manager.xml:319(title)
 msgid "About"
 msgstr "Acerca de"
 
-#: C/gnome-color-manager.xml:301(para)
+#: C/gnome-color-manager.xml:320(para)
 msgid ""
 "GNOME Color Manager was written by Richard Hughes <email>richard@hughsie."
 "com</email>. To find more information about GNOME Color Manager, please "
@@ -479,7 +506,7 @@ msgstr ""
 "\" type=\"http\">página web del <application>Gestor de color de GNOME</"
 "application></ulink>."
 
-#: C/gnome-color-manager.xml:307(para)
+#: C/gnome-color-manager.xml:326(para)
 msgid ""
 "To report a bug or make a suggestion regarding this application or this "
 "manual, follow the directions at the <ulink url=\"http://projects.gnome.org/"
@@ -491,7 +518,7 @@ msgstr ""
 "projects.gnome.org/gnome-color-manager/bugs.html\" type=\"http\">página de "
 "errores del <application>Gestor de color de GNOME</application></ulink>."
 
-#: C/gnome-color-manager.xml:313(para)
+#: C/gnome-color-manager.xml:332(para)
 msgid ""
 "This program is distributed under the terms of the GNU General Public "
 "license as published by the Free Software Foundation; either version 2 of "
